--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-lazyload": "^2.6.5",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0"
   },
