--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
   "dependencies": {
     "antd": "^3.26.2",
     "babel-plugin-import": "^1.13.0",
+    "draft-js": "^0.11.3",
     "dva": "^2.4.1",
     "dva-loading": "^3.0.19",
+    "github-markdown-css": "^3.0.1",
+    "highlight.js": "^9.17.1",
+    "markdown-it": "^10.0.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-ins": "^3.0.0",
+    "markdown-it-mark": "^3.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
     "node-sass": "^4.13.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-lazyload": "^2.6.5",
+    "react-markdown": "^4.2.2",
+    "react-markdown-editor-lite": "^0.5.1",
+    "react-syntax-highlighter": "^12.2.1",
     "sass": "^1.23.7",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
