--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "antd": "^3.26.2",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "draft-js": "^0.11.3",
     "dva": "^2.4.1",
